--- a/ASSETS/CSS/style.css
+++ b/ASSETS/CSS/style.css
@@ -1,6 +1,6 @@
 :root{
 
-    --bg1:rgb(42, 75, 165);
+    --bg1:rgb(161, 150, 150);
     --bg2: rgb(44, 42, 43);
     --body:rgb( 95.86, 86);
     --brand: #3bf272;
@@ -32,7 +32,7 @@ H3{
 }a
  #banner .btn-brand:hover{
     background-color: rgb(141, 17, 199);
-    color: rgb(224, 137, 6);
+    color: black;
     border-color: rgb(172, 8, 187);
 }
 section{
@@ -76,11 +76,11 @@ background-position: center;
 background-attachment: fixed;
 }
 #reviews{
-    background-color:  rgba(9, 109, 224, 0.425);
+    background-color:  rgba(3, 32, 87, 0.425);
 }
 
 .testimonials{
-    background-color:blueviolet;
+    background-color:darksalmon;
     padding:  30px;
 }
 
@@ -106,7 +106,7 @@ CSS
   }
 
   .faq-question {
-    background-color: #f8f9fa;
+    background-color: darkgrey;
     border: none;
     border-bottom: 1px solid #dee2e6;
     border-radius: 0;
